# The-Joy-of-Using-Keyboard

./: .gitignore  README.md  binarySearch.py  isomorph.py
C# more like E/Node/: Node.cs  Program.cs
C# more like E/stack/: stack.cs  stack.sln
C# more like E/test/: Program.cs  test.sln
C#/Arche/: Arche.csproj  Arche.sln  AssemblyConstructor.cs  Stdio.cs
C#/ConsoleApp1/: ConsoleApp1.csproj
C#/Node/: Node.cs  Node.sln
C#/Prototype/: Prototype.csproj  Prototype.sln  (+1 more)
Clojure/: interest_is_interesting.clj  tt.clj
Julia/: Untitled-1.ipynb  reverse_string.jl  roman.jl  tt.jl
Nim/: file.nim
Python/: .gitignore  FnOverload.py  KMP.py  automat.py  avalanche_dog_boot_model.pkl  calculate.py  concurrency.py  ee.py  exer_armstrong_numbers.py  exer_darts.py  horners.py  ml.ipynb  polynomialRegression.py  root.py  sieve.py  sort.py  test.py  tree.py
Python/imageProcessing/: pyproject.toml
Python/imageProcessing/imageProcessor/: dither.py  errorDiffusion.py  grayscale.py
Python/iss/: calcs.py  num2.py  num3.py  num4.py  num5.py  pyproject.toml
Python/pdfMerge/: Manager.py  cnnct.py  fontManager.py  p3.py  pyproject.toml
Ruby/: spaceAge.rb
elixir/: compare.ex  darts.ex  lasagna.ex  leap.ex  log.ex  playground.ex  secret_xor.ex
fortran/: exer.f90  f.f03  reverse.f08  sieve.f90
lisp/: fiel.lisp  pal_picker.lisp  pizza.lisp  yacht.lisp
nim/: main.nim
powershell/: sfxp.ps1  sieve.sh
red/: binary_s.red  collatz.red  difference_of_squares.red  egg_count.red  grains.red  hamming.red  leap_year.red  nucleotide_count.red  protein-translation.red  raindrops.red  readme.md  resistor_color.red  scrabble_score.red  space-age.red  triangle.red  two-fer.red
uiua/: f.ua
wasm/: first.wat
(+99 files in other folders)
