[tool.poetry]
name = "imageprocessing"
version = "0.1.0"
description = ""
authors = ["Michal Hloch <hloch.michal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
numba = "^0.59.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
